--- a/Assignment.html
+++ b/Assignment.html
@@ -4,6 +4,13 @@
 		<title>Skeletor Inc.</title>
 		<meta charset="utf-8">
 	</head>
+	
+	<nav>
+		<a href='Assignment.html'>Home</a> |
+		<a href='Dog.html'>More Evil Stuff</a> |
+		<a href='DONT TOUCH.html'>Dont Touch!</a> 
+	</nav>
+	
 	<body>
 	
 		<header>
@@ -14,11 +21,14 @@
 			<h3>I mean, come on! Look at him!</h3>
 				<img src="https://i.kym-cdn.com/entries/icons/original/000/002/691/sings.jpg">
 			<p>Asleep! While my minions storm his base and he cant even be bothered to wake up! He-Man is a wimp and a turd holster!</p>
-			<p>And look at his ugly dog! Someone put a bag over its head please!</p>
-				<a href="Cringer.webp">Ugly Dog</a>
 		
 			<p>While im at it, check him out crying like a baby. HAHAHAHAHA</p>
 				<a href="https://i.pinimg.com/236x/28/82/83/288283a32ad0025cc53d02dc7dea5628.jpg">Wimp-Man</a>
+			
+			<h3>See? Even Jane Welch from The Washington Post agrees *_*b</h3>
+			 <blockquote cite="https://www.washingtonpost.com/archive/opinions/1985/04/21/he-man-is-a-wimp-master/b4ab8df1-e21f-42a1-bff9-8375b2308400/">
+While it's true that He-Man has all the bulges of Schwarzenegger and all the strength of Superman, he's really nothing more than Alan Alda in muscles. He refuses to cut down trees and has a Bambi-complex about hunting.
+</blockquote> 
 		
 		</main>
 		<footer>Sincerely, Skeletor</footer>
