Add HTML and CSS assignments

--- a/Assignment.html
+++ b/Assignment.html
@@ -8,7 +8,7 @@
 	<nav>
 		<a href='Assignment.html'>Home</a> |
 		<a href='Dog.html'>More Evil Stuff</a> |
-		<a href='DONT TOUCH.html'>Dont Touch!</a> 
+		<a href='DONT_TOUCH.html'>Dont Touch!</a> 
 	</nav>
 	
 	<body>
