--- a/Dog.html
+++ b/Dog.html
@@ -4,7 +4,7 @@
 	<nav>
 		<a href='Assignment.html'>Home</a> |
 		<a href='Dog.html'>More Evil Stuff</a> |
-		<a href='DONT TOUCH.html'>Dont Touch!</a> 
+		<a href='DONT_TOUCH.html'>Dont Touch!</a> 
 	</nav>
 
 			<p>Look at his ugly dog! Someone put a bag over its head please!</p>
