--- a/DONT_TOUCH.html
+++ b/DONT_TOUCH.html
@@ -4,7 +4,7 @@
 	<nav>
 		<a href='Assignment.html'>Home</a> |
 		<a href='Dog.html'>More Evil Stuff</a> |
-		<a href='DONT_TOUCH.html'>Dont Touch!</a> 
+		<a href='DONT TOUCH.html'>Dont Touch!</a> 
 	</nav>
 	
 		<h1>I SAID TO STAY OUT!</h1>
