--- a/Basic_HTML_and_CSS/one_page_website/one_page_website.html
+++ b/Basic_HTML_and_CSS/one_page_website/one_page_website.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Concerning Hobbits</title>
 		<meta charset="utf-8">
+		<link rel="stylesheet" href="./one_page_website.css">
 	</head>
 	<body>
 		<!-- NAV -->
@@ -83,7 +84,7 @@
 						<form action="" method="post">
 							<input class="ask" type="text" value="Full Name">
 							<input class="ask" type="text" value="Email">
-							<input class="ask" type="text" value="Ask your Question!">
+							<input class="ask" type="question" value="Ask your Question">
 							<input type="submit" value="submit">
 						</form>
 					</div>
